--- a/example-html/index.html
+++ b/example-html/index.html
@@ -15,16 +15,18 @@
 			.then((response) => response.json())
 			.then((env) => {
 				// Initialise Auth
-				let auth = new motorJS.Auth({
+				// Option 1 - User user / driver credentials
+				let auth1 = new motorJS.Auth({
 					orgId: env.init.orgId, // <-- Replace with your organisation ID
 					region: env.init.region, // <-- Replace with your region
 					email: env.auth.email, // <-- Replace with users/drivers email
 					password: env.auth.password, // <-- Replace with users/drivers password
 					accountType: env.auth.accountType, // <-- Can be either "user" or "driver"
-				})
+				});
 
 				// Optional: Try logging in beforehand to see if the credentials are correct. If not, Motor SDK will try to login automatically when you use it.
-				auth.login()
+				auth1
+					.login()
 					.then((res) => {
 						logSuccess(`Login successful. Token: ${JSON.stringify(res, null, 2)}\n\n`);
 					})
@@ -32,12 +34,19 @@
 						logError(`Login failed. Error: ${JSON.stringify(err, null, 2)}\n\n`);
 					});
 
+				// Option 2 - Use API key
+				let auth2 = new motorJS.Auth({
+					orgId: env.init.orgId, // <-- Replace with your organisation ID
+					region: env.init.region, // <-- Replace with your region
+					apiKey: "pk:sk",
+				});
+
 				// Initialise the Motor SDK and pass the Auth object
 				let motor = new motorJS.Motor({
 					orgId: env.init.orgId,
 					region: env.init.region,
 					storage: window.localStorage, // <-- Set storage to localStorage to persist the user session
-					auth: auth, // <-- Pass the Auth object here
+					auth: auth2, // <-- Pass the Auth object here
 				});
 
 				motor
@@ -86,9 +95,23 @@
 					.catch((err) => {
 						logError(`Error fetching vehicle: ${JSON.stringify(err, null, 2)}\n\n`);
 					});
-			}).catch((err) => {
+
+				// List multiple drivers. Uses asyncGenerator for multiple async calls.
+				// Below example shows how to loop throght the listDrives response.
+				async function listDrivers() {
+					for await (let driver of motor.listDrivers({
+						maxRecords: 125,
+					})) {
+						logSuccess(`Driver Fetched: ${JSON.stringify(driver.fullName(), null, 2)}\n`);
+					}
+				}
+
+				// Call the function to list drivers
+				listDrivers();
+			})
+			.catch((err) => {
 				// Make sure you have a valid env.json file in the root directory of the repository.
-				logError(`Error reading env.json - Make sure environment file is present in the root directory of the repository. If not, create one from env.example.json.\n\n`);
+				logError(`Error - ${err} \n\n`);
 			});
 	</script>
 
