--- a/example-html/index.html
+++ b/example-html/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>MotorJS Web Example</title>
-		<script type="text/javascript" src="../dist/web/index.js"></script>
+		<script type="text/javascript" src="../dist/web/motorJS.min.js"></script>
 	</head>
 	<body>
 		<h1 style="text-align: center; font-family: Arial, Helvetica, sans-serif">Inaza JS SDK Example</h1>
